# PythonAutomatedDriving

./: .gitignore  .pre-commit-config.yaml  README.md  README_en.md  README_zh.md  environment.yml  pyproject.toml  requirements.txt
AuxiliaryFunctions/: coordinate_transformation.py  curvature.py
LocalPathPlanning/FSAE_PathPlanning/: FSAE_local_path_planning.py  README.md
src/LocalPathPlanning/FSAE_PathPlanning/: FSAE_local_path_planning.py  test_data.py
src/utilities/: discrete_curve_funcs.py  numpy_additional_funcs.py
