[tool.poetry]
name = "Python_Automated_Driving"
version = "0.1.0"
description = "Python codes for automated driving algorithms."
authors = ["muzing <muzi2001@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.0"
scipy = "^1.9.0"
matplotlib = "^3.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
