[tool.poetry]
name = "Python_Automated_Driving"
version = "0.1.0"
description = "Python codes for automated driving algorithms."
keywords = ["automated-driving", "algorithms"]
authors = ["muzing <muzi2001@foxmail.com>"]
license = "Apache-2.0"
readme = ["README.md", "README_zh.md"]
repository = "https://github.com/muziing/PythonAutomatedDriving"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/muziing/PythonAutomatedDriving/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.0"
scipy = "^1.11.0"
matplotlib = "^3.7.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.0"
mypy = "^1.4.1"
ruff = "^0.0.275"
line-profiler = "^4.0.0"
pre-commit = "^3.3.3"
jupyterlab = "^4.0.2"

[[tool.poetry.source]]
name = "tsinghua_mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
# 目前版本的 Ruff 对中文字符支持不佳，对包含中文注释的代码会误认为过长，
# 所以需要在配置文件中设置较大的行长度。真正的行长度控制由 Black 完成
line-length = 130

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
